auth forms and favicon

--- a/src/components/Auth/Auth.module.sass
+++ b/src/components/Auth/Auth.module.sass
@@ -6,6 +6,22 @@
   justify-content: center
   color: #888da8
   font-family: 'Roboto'
+  .paper
+    border-radius: 3px
+    box-shadow: 0 3px 17px 0 rgba(0, 0, 0, 0.06)
+  .logo
+    display: flex
+    justify-content: center
+    margin-bottom: 20px
+    img
+      max-height: 70px
+  .tabs
+    border-top-left-radius: 3px
+    border-top-right-radius: 3px
+    button
+      font-weight: 300
+  .form
+    font-weight: 300
   
 .bg
   position: absolute
